# cfm-vc

./: .gitignore  README.md  data_utils.py  inference.ipynb  inference.py  lowercase_mp3_and_folders.sh  models.py  onnx_example.ipynb  onnx_export.py  onnx_export_old.py  preprocess.ipynb  preprocess.py  preprocess_f0_hubert.py  preprocess_ppg_units.py  preprocess_ppgs.py  pyproject.toml  requirements.txt  testing.ipynb  train.py  train_index.py  utils.py  xeus.ipynb
cluster/: train_cluster.py  train_kmeans_stream_xeus.py
configs/: config.json  config_ppgs.json  config_test.json  diffusion.yaml
configs_template/: config_template.json
docs/: ez_vc_implementation_notes.md  llm_vc_approach.md
filelists/: gametts_train.txt  gametts_val.txt
inference/: infer_tool.py
models/: codec_decoder.py  models.py
modules/: attentions.py  commons.py  content_encoder.py  denoiser.py  duration_predictor.py  ema_callback.py  learnable_upsampling.py  mel_encoder.py  mel_processing.py  modules.py  perceiver_encoder.py  ppg_decoder.py  reference_encoder.py  reversal_classifer.py  schedulers.py  speaker_encoder.py  variance_decoder.py
modules/F0Predictor/: CrepeF0Predictor.py  FCPEF0Predictor.py  RMVPEF0Predictor.py
modules/F0Predictor/fcpe/: model.py
modules/cfm/: cfm_neuralode.py  decoder.py  diffusion.py  dit.py  flow_matching.py  wavenet.py
modules/wavenet/: wavenet.py
onnxexport/: model_onnx.py  model_onnx_speaker_mix.py
outputs/: smoke_test.npy
preprocess/: preprocess_ppg_units.py  preprocess_ppgs.py  save_codes.py
vdecoder/: utils.py
vdecoder/IstftGenerator/: model.py  module.py
vencoder/: CNHubertLarge.py  ContentVec256L12_Onnx.py  ContentVec256L9.py  ContentVec256L9_Onnx.py  ContentVec768L12.py  ContentVec768L12_Onnx.py  ContentVec768L9_Onnx.py  DPHubert.py  HubertSoft.py  HubertSoft_Onnx.py  WavLMBasePlus.py  WhisperPPG.py  WhisperPPGLarge.py  encoder.py
