[project]
name = "cfm-vc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "einx>=0.4.3",
    "espnet>=202511",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "setuptools<81",
    "torch>=2.10.0",
    "torchaudio==2.10.0",
    "torchcodec>=0.11.1",
    "torchvision>=0.25.0",
    "vector-quantize-pytorch>=1.27.21",
    "torchtune>=0.6.1",
    "torchao>=0.17.0",
    "datasets>=2.14.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
