[project]
name = "cfm-vc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "einx>=0.4.3",
    "espnet>=202511",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "setuptools<81",
    "torch>=2.10.0",
    "torchaudio==2.10.0",
    "torchcodec>=0.11.1",
    "torchvision>=0.25.0",
    "vector-quantize-pytorch>=1.27.21",
    "torchtune>=0.6.1",
    "torchao>=0.17.0",
    "datasets>=2.14.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "wandb>=0.19.0",
    "tensorboard>=2.20.0",
    "torchdyn>=1.0.6",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "vocos>=0.1.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
